--- a/reservations.html
+++ b/reservations.html
@@ -117,7 +117,7 @@
 
   <!-- Confirmed Reservations -->
   <section class="reservations-section">
-    <h2 class="section-title">✅ Confirmed Reservations</h2>
+    <h2 class="section-title"><span style="color:#28a745;">&#10003;</span> Confirmed Reservations</h2>
     <div class="reservations-container" id="confirmedReservations">
       <div class="res-card">
         <div class="res-info">
@@ -126,7 +126,7 @@
         <p>Check-in: Dec 10, 2025</p>
         <p>Stay: 3 Nights</p>
         <p>Total Paid: 1200 SAR</p>
-        <p>Status: ✅ Confirmed & Paid</p>
+        <p>Status: <span style="color:#28a745;">&#10003;</span> Confirmed & Paid</p>
         </div>
         <div class="res-actions">
           <button class="cancel-btn">Cancel</button>
@@ -140,7 +140,7 @@
         <p>Date: Jan 13, 2026</p>
         <p>Guests: 2</p>
         <p>Total Paid: 450 SAR</p>
-        <p>Status: ✅ Confirmed & Paid</p>
+        <p>Status: <span style="color:#28a745;">&#10003;</span> Confirmed & Paid</p>
         </div>
         <div class="res-actions">
           <button class="cancel-btn">Cancel</button>
